Compare different feature transform.

--- a/notebooks/sidekick-0-formal-definition.ipynb
+++ b/notebooks/sidekick-0-formal-definition.ipynb
@@ -107,7 +107,12 @@
     "$k(\\mathbf{x}, \\mathbf{x}') = \\sigma^2_f(\\sum_{i=1}^{\\text{D}}x_ix_i' + 1)^k = \\sigma^2_f(\\mathbf{x}^T \\mathbf{x}' + 1)^k$\n",
     "\n",
     "## Squared Exponential\n",
-    "$k(\\mathbf{x}, \\mathbf{x}') = \\sigma^2_f \\text{exp}\\left(\\frac{\\left\\Vert \\mathbf{x}-\\mathbf{x}' \\right\\Vert^2}{2l^2}\\right)$"
+    "\n",
+    "#### ARD \n",
+    "$k(\\mathbf{x}, \\mathbf{x}') = \\sigma^2_f \\text{exp}\\left(\\sum_{d=1}^D\\frac{\\left(x_d - x_d' \\right)^2}{2l_d^2}\\right)$\n",
+    "\n",
+    "#### Non-ARD \n",
+    "$k(\\mathbf{x}, \\mathbf{x}') = \\sigma^2_f \\text{exp}\\left(-\\frac{\\left\\Vert \\mathbf{x}-\\mathbf{x}' \\right\\Vert^2}{2l^2}\\right)$"
    ]
   },
   {
