Small bug corrected in demo SVI notebook

--- a/notebooks/gp-stochastic-variational-inference.ipynb
+++ b/notebooks/gp-stochastic-variational-inference.ipynb
@@ -46,7 +46,7 @@
     "def callback(i):\n",
     "    t.value = str(m.log_likelihood())\n",
     "    #Stop after 5000 iterations\n",
-    "    if i['n_iter'] > num_inducing_points:\n",
+    "    if i['n_iter'] > iterations:\n",
     "        return True\n",
     "    return False\n",
     "info = opt.minimize_until(callback)"
